Fix dark mode nav tree

--- a/src/www/styles/pages/wiki.less
+++ b/src/www/styles/pages/wiki.less
@@ -78,7 +78,7 @@ main-wiki {
         }
 
         @media screen and (max-width: 766px) {
-            background-color: white;
+            background-color: var(--component-color);
             transition-duration: 0.1s;
             position: fixed;
             left: 0;
